# energy-demand-forecast

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/processed/: processed_energy_demand_generation.parquet
energy_demand_forecast/: main.py
exploratory/: __init__.py  df_energy_handling_empty.ipynb  df_energy_handling_empty.py  handling_empties.ipynb  handling_empty.py
exploratory/.ipynb_checkpoints/: handling_empties-checkpoint.ipynb
exploratory/visualise/: __init__.py  skewness.py
src/: __init__.py  main.py  preprocess.py  schema.py
