[tool.poetry]
name = "energy-demand-forecast"
version = "0.1.0"
description = ""
authors = ["ryukyi <ryukyi@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
mypy = "^1.9.0"
black = "^24.3.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
